# UseinsiderUITests

./: README.md  pyproject.toml
pages/: careers_page.py  insider_home_page.py  screenshot_util.py
tests/: conftest.py  test_insider.py
