[tool.poetry]
name = "useinsideruitests"
version = "0.1.0"
description = ""
authors = ["VinichenkoB <seinzumliebe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"
selenium = "^4.9.0"
webdriver-manager = "^3.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
